
2013-08-05  GoldenKevin  (revision 220)

	* Preserve unique ID of InventorySlots. Stacks of cash items that were not
	created at the same time through purchase, drop pickup, or !give command
	cannot be broken or consolidated.
	* Unique ID moved from `inventoryitems` table to new `cashshoppurchases`
	table that also holds other cash shop purchase information. `uniqueid` table
	is no longer needed and has been removed.
	* Merged UniqueIdGenerator with InventoryTools.

2013-08-07  GoldenKevin  (revision 221)

	* CashShopStaging is now an implementation of IInventory rather than an
	extension of Inventory because it has no concept of slot positions.
	* Implemented ShopCharacter persistence. State is committed whenever the
	save character packet is received and when the player exits the shop.
	* Use AtomicIntegers for keeping track of cash because volatile array
	elements are a pain to implement.
	* Implemented buying of items from cash shop and transferring cash items to
	and from staging. Added code stubs for more cash shop operations.

2013-08-08  GoldenKevin  (revision 222)

	* Players get their buddy list updated if a buddy in the cash shop exits the
	shop without returning to a channel, e.g. by crashing or hitting Alt-F4.
	* Buddy discovery now works for players in the cash shop. Logging into a
	character with a buddy in the cash shop will show that buddy as in the cash
	shop as opposed to offline.
	* Display all queued buddy invites when a player leaves the cash shop in
	case another player sent an invite while the recipient was in the shop and
	unable to respond.
	* Fixed whisper and /find command reporting that offline players are in the
	cash shop.

2013-08-09  GoldenKevin  (revision 223)

	* Implemented cash item gifting in the cash shop.
	* Cleaned up cash shop packets.

Copyright 2011-2013 GoldenKevin
Copying and distribution of this file, with or without modification, are
permitted provided the copyright notice and this notice are preserved.